objects/Account_Level_ECP__c.object
<CustomObject>
	<fields>
		<fullName>AEC_Corporate_Account_NA__c</fullName>
		<label>AEC Corporate Account NA</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>AEC_Strategic_Account_NA__c</fullName>
		<label>AEC Strategic Account NA</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>AEC_Territory_Account_NA__c</fullName>
		<label>AEC Territory Account NA</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>AES_Engaged_Status__c</fullName>
		<label>AES Engaged Status</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>AES_Engagement_Score__c</fullName>
		<label>AES Engagement Score</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>AES_Index__c</fullName>
		<label>AES Index</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>AES_Threshold__c</fullName>
		<label>AES Threshold</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Account_Industry_ECP__c</fullName>
		<label>Account Industry ECP</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Account__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Account</label>
		<referenceTo>Account</referenceTo>
		<relationshipLabel>Account Level ECP</relationshipLabel>
		<relationshipName>Account_Level_ECP</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Active_Adcloud_Pipeline__c</fullName>
		<label>Active Adcloud Pipeline</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Active_Adobe_Analytics_Pipeline__c</fullName>
		<label>Active Adobe Analytics Pipeline</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Active_Adobe_Audience_Manager_Pipeline__c</fullName>
		<label>Active Adobe Audience Manager Pipeline</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Active_Adobe_Campaign_Pipeline__c</fullName>
		<label>Active Adobe Campaign Pipeline</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Active_Adobe_Experience_Manager_Pipeline__c</fullName>
		<label>Active Adobe Experience Manager Pipeline</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Active_Adobe_Target_Pipeline__c</fullName>
		<label>Active Adobe Target Pipeline</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AAM_Downloads__c</fullName>
		<label>Adobe_Website_AAM_Downloads</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AAM_Form_Submissions__c</fullName>
		<label>Adobe_Website_AAM_Form_Submissions</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AAM_Page_Views__c</fullName>
		<label>Adobe_Website_AAM_Page_Views</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AAM_Return_Visits__c</fullName>
		<label>Adobe_Website_AAM_Return_Visits</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AAM_Video_Views__c</fullName>
		<label>Adobe_Website_AAM_Video_Views</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AAM_Visits_MTD__c</fullName>
		<label>Adobe Website AAM Visits MTD</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AAM_Visits_QTD__c</fullName>
		<label>Adobe Website AAM Visits QTD</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AAM_Visits__c</fullName>
		<label>Adobe Website AAM Visits YTD</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AA_Downloads__c</fullName>
		<label>Adobe_Website_AA_Downloads</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AA_Form_Submissions__c</fullName>
		<label>Adobe_Website_AA_Form_Submissions</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AA_Page_Views__c</fullName>
		<label>Adobe_Website_AA_Page_Views</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AA_Return_Visits__c</fullName>
		<label>Adobe_Website_AA_Return_Visits</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AA_Video_Views__c</fullName>
		<label>Adobe_Website_AA_Video_Views</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AA_Visits_MTD__c</fullName>
		<label>Adobe Website AA Visits MTD</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AA_Visits_QTD__c</fullName>
		<label>Adobe Website AA Visits QTD</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AA_Visits__c</fullName>
		<label>Adobe Website AA Visits YTD</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AC_Downloads__c</fullName>
		<label>Adobe_Website_AC_Downloads</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AC_Form_Submissions__c</fullName>
		<label>Adobe_Website_AC_Form_Submissions</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AC_Page_Views__c</fullName>
		<label>Adobe_Website_AC_Page_Views</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AC_Return_Visits__c</fullName>
		<label>Adobe_Website_AC_Return_Visits</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AC_Video_Views__c</fullName>
		<label>Adobe_Website_AC_Video_Views</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AC_Visits_MTD__c</fullName>
		<label>Adobe Website AC Visits MTD</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AC_Visits_QTD__c</fullName>
		<label>Adobe Website AC Visits QTD</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AC_Visits__c</fullName>
		<label>Adobe Website AC Visits YTD</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AEM_Downloads__c</fullName>
		<label>Adobe_Website_AEM_Downloads</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AEM_Form_Submissions__c</fullName>
		<label>Adobe_Website_AEM_Form_Submissions</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AEM_Page_Views__c</fullName>
		<label>Adobe_Website_AEM_Page_Views</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AEM_Return_Visits__c</fullName>
		<label>Adobe_Website_AEM_Return_Visits</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AEM_Video_Views__c</fullName>
		<label>Adobe_Website_AEM_Video_Views</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AEM_Visits_MTD__c</fullName>
		<label>Adobe Website AEM Visits MTD</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AEM_Visits_QTD__c</fullName>
		<label>Adobe Website AEM Visits QTD</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AEM_Visits__c</fullName>
		<label>Adobe Website AEM Visits YTD</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AMC_All_Downloads__c</fullName>
		<label>Adobe_Website_AMC_All_Downloads</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AMC_All_Form_Submissions__c</fullName>
		<label>Adobe_Website_AMC_All_Form_Submissions</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AMC_All_Page_Views__c</fullName>
		<label>Adobe_Website_AMC_All_Page_Views</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AMC_All_Return_Visits__c</fullName>
		<label>Adobe_Website_AMC_All_Return_Visits</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AMC_All_Video_Views__c</fullName>
		<label>Adobe_Website_AMC_All_Video_Views</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AMC_Only_Downloads__c</fullName>
		<label>Adobe_Website_AMC_Only_Downloads</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AMC_Only_Form_Submissions__c</fullName>
		<label>Adobe_Website_AMC_Only_Form_Submissions</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AMC_Only_Page_Views__c</fullName>
		<label>Adobe_Website_AMC_Only_Page_Views</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AMC_Only_Return_Visits__c</fullName>
		<label>Adobe_Website_AMC_Only_Return_Visits</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AMC_Only_Video_Views__c</fullName>
		<label>Adobe_Website_AMC_Only_Video_Views</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AMC_Only_Visits__c</fullName>
		<label>Adobe_Website_AMC_Only_Visits</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AMO_Downloads__c</fullName>
		<label>Adobe_Website_AMO_Downloads</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AMO_Form_Submissions__c</fullName>
		<label>Adobe_Website_AMO_Form_Submissions</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AMO_Page_Views__c</fullName>
		<label>Adobe_Website_AMO_Page_Views</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AMO_Return_Visits__c</fullName>
		<label>Adobe_Website_AMO_Return_Visits</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AMO_Video_Views__c</fullName>
		<label>Adobe_Website_AMO_Video_Views</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AMO_Visits_MTD__c</fullName>
		<label>Adobe Website AMO Visits MTD</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AMO_Visits_QTD__c</fullName>
		<label>Adobe Website AMO Visits QTD</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AMO_Visits__c</fullName>
		<label>Adobe Website AMO Visits YTD</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AP_Downloads__c</fullName>
		<label>Adobe_Website_AP_Downloads</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AP_Form_Submissions__c</fullName>
		<label>Adobe_Website_AP_Form_Submissions</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AP_Page_Views__c</fullName>
		<label>Adobe_Website_AP_Page_Views</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AP_Return_Visits__c</fullName>
		<label>Adobe_Website_AP_Return_Visits</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AP_Video_Views__c</fullName>
		<label>Adobe_Website_AP_Video_Views</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AP_Visits__c</fullName>
		<label>Adobe_Website_AP_Visits</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AS_Downloads__c</fullName>
		<label>Adobe_Website_AS_Downloads</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AS_Form_Submissions__c</fullName>
		<label>Adobe_Website_AS_Form_Submissions</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AS_Page_Views__c</fullName>
		<label>Adobe_Website_AS_Page_Views</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AS_Return_Visits__c</fullName>
		<label>Adobe_Website_AS_Return_Visits</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AS_Video_Views__c</fullName>
		<label>Adobe_Website_AS_Video_Views</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AS_Visits__c</fullName>
		<label>Adobe_Website_AS_Visits</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AT_Downloads__c</fullName>
		<label>Adobe_Website_AT_Downloads</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AT_Form_Submissions__c</fullName>
		<label>Adobe_Website_AT_Form_Submissions</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AT_Page_Views__c</fullName>
		<label>Adobe_Website_AT_Page_Views</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AT_Return_Visits__c</fullName>
		<label>Adobe_Website_AT_Return_Visits</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AT_Video_Views__c</fullName>
		<label>Adobe_Website_AT_Video_Views</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AT_Visits_MTD__c</fullName>
		<label>Adobe Website AT Visits MTD</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AT_Visits_QTD__c</fullName>
		<label>Adobe Website AT Visits QTD</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_AT_Visits__c</fullName>
		<label>Adobe Website AT Visits YTD</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Website_Missing_Ind__c</fullName>
		<label>Adobe_Website_Missing_Ind</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Advertising_Cloud_Visits__c</fullName>
		<label>Advertising Cloud Visits</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Alexa_Web_Domain_Count__c</fullName>
		<label>Alexa_Web_Domain_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Alexa_Web_Missing_Ind__c</fullName>
		<label>Alexa_Web_Missing_Ind</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Alexa_Web_Mth_PVs_per_Domain__c</fullName>
		<label>Alexa_Web_Mth_PVs_per_Domain</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Alexa_Web_PVs_Per_UV_per_Domain__c</fullName>
		<label>Alexa_Web_PVs_Per_UV_per_Domain</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Alexa_Web_Total_Mth_PVs__c</fullName>
		<label>Alexa_Web_Total_Mth_PVs</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Alexa_Web_Total_Mth_UVs__c</fullName>
		<label>Alexa_Web_Total_Mth_UVs</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Alexa_Web_UVs_per_Domain__c</fullName>
		<label>Alexa_Web_UVs_per_Domain</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Analytics_Cloud_Visits__c</fullName>
		<label>Analytics Cloud Visits</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_AAM_Comp_Count__c</fullName>
		<label>Builtwith_AAM_Comp_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_AEM_Comp_Count__c</fullName>
		<label>Builtwith_AEM_Comp_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_AMO_Comp_Count__c</fullName>
		<label>Builtwith_AMO_Comp_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_AdRoll__c</fullName>
		<label>Builtwith_AdRoll</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_Akamai__c</fullName>
		<label>Builtwith_Akamai</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_Analytics_Comp_Count__c</fullName>
		<label>Builtwith_Analytics_Comp_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_Campaign_Comp_Count__c</fullName>
		<label>Builtwith_Campaign_Comp_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_Drupal__c</fullName>
		<label>Builtwith_Drupal</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_Google_Analytics__c</fullName>
		<label>Builtwith_Google_Analytics</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_Google_Universal_Analytics__c</fullName>
		<label>Builtwith_Google_Universal_Analytics</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_JW_Player__c</fullName>
		<label>Builtwith_JW_Player</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_Marketo__c</fullName>
		<label>Builtwith_Marketo</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_MediaMath__c</fullName>
		<label>Builtwith_MediaMath</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_Missing_Ind__c</fullName>
		<label>Builtwith_Missing_Ind</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_Optimizely__c</fullName>
		<label>Builtwith_Optimizely</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_Primetime_Comp_Count__c</fullName>
		<label>Builtwith_Primetime_Comp_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_Rocket_Fuel__c</fullName>
		<label>Builtwith_Rocket_Fuel</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_Sendgrid__c</fullName>
		<label>Builtwith_Sendgrid</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_Target_Comp_Count__c</fullName>
		<label>Builtwith_Target_Comp_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_Tealium__c</fullName>
		<label>Builtwith_Tealium</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_Tech_Count__c</fullName>
		<label>Builtwith_Tech_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_Vimeo__c</fullName>
		<label>Builtwith_Vimeo</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Builtwith_eXelate__c</fullName>
		<label>Builtwith_eXelate</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>CURR_BUY_SIZE__c</fullName>
		<label>CURR_BUY_SIZE</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>DME_Named_Account_NA_ECP__c</fullName>
		<label>DME Named Account NA ECP</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Data_Timestamp_Sales_Empowerment__c</fullName>
		<label>Data Timestamp Sales Empowerment</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>Data_Timestamp_Web_Reporting__c</fullName>
		<label>Data Timestamp Web Reporting</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>Date_of_Activity_Web_Signal__c</fullName>
		<label>Date of Activity Web Signal</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>Days_Since_Date_of_Activity_Web_Signal__c</fullName>
		<formula>TODAY() - Date_of_Activity_Web_Signal__c</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Days Since Date of Activity Web Signal</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Days_Since_Last_Data_Timestamp_Sales_Emp__c</fullName>
		<formula>TODAY() - Data_Timestamp_Sales_Empowerment__c</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Days Since Last Data Timestamp Sales Emp</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Demandbase_SID__c</fullName>
		<label>Demandbase SID</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>ECP_Missing_Ind__c</fullName>
		<label>ECP_Missing_Ind</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>EXP_VALUE__c</fullName>
		<label>EXP_VALUE</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Engaged_in_Month__c</fullName>
		<label>Engaged in Month</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Engaged_in_Quarter__c</fullName>
		<label>Engaged in Quarter</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Engaged_in_Week__c</fullName>
		<label>Engaged in Week</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Experience_Cloud_Visits__c</fullName>
		<label>Experience Cloud Visits</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>FIRST_YEAR_OPP_HIGH__c</fullName>
		<label>FIRST_YEAR_OPP_HIGH</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>FIRST_YEAR_OPP_LOW__c</fullName>
		<label>FIRST_YEAR_OPP_LOW</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>FIRST_YEAR_OPP_MEAN__c</fullName>
		<label>FIRST_YEAR_OPP_MEAN</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>GTM_Account_Segment__c</fullName>
		<description>This field will be populated by the Data Science team process that is maintaining the other field values on the Account Level ECP object. The data is sourced from edc_ingest.edc_ecp_sfdc_brdg_gtm Hadoop table which is refreshed weekly.</description>
		<label>GTM Account Segment</label>
		<length>25</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Has_Adcloud__c</fullName>
		<label>Has Adcloud</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Has_Adobe_Analytics__c</fullName>
		<label>Has Adobe Analytics</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Has_Adobe_Audience_Manager__c</fullName>
		<label>Has Adobe Audience Manager</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Has_Adobe_Campaign__c</fullName>
		<label>Has Adobe Campaign</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Has_Adobe_Experience_Manager__c</fullName>
		<label>Has Adobe Experience Manager</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Has_Adobe_Target__c</fullName>
		<label>Has Adobe Target</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Has_BlueKai__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Has BlueKai</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Has_Google_Analytics__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Has Google Analytics</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Has_Krux__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Has Krux</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Has_Microsoft_Dynamics__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Has Microsoft Dynamics</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Has_Optimizely__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Has Optimizely</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Has_Sitecore__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Has Sitecore</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Kantar_Search_Advertiser_Count__c</fullName>
		<label>Kantar_Search_Advertiser_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Kantar_Search_Missing_Ind__c</fullName>
		<label>Kantar_Search_Missing_Ind</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Kantar_Search_Quarterly_Search_Spend__c</fullName>
		<label>Kantar_Search_Quarterly_Search_Spend</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Marketing_Cloud_Visits__c</fullName>
		<label>Marketing Cloud Visits</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>MixRank_Android_App_Count__c</fullName>
		<label>MixRank_Android_App_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>MixRank_Android_Ratings__c</fullName>
		<label>MixRank_Android_Ratings</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>MixRank_Android_SDKs_Avg__c</fullName>
		<label>MixRank_Android_SDKs_Avg</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>MixRank_Missing_Ind__c</fullName>
		<label>MixRank_Missing_Ind</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>MixRank_Total_App_Count__c</fullName>
		<label>MixRank_Total_App_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>MixRank_Total_Ratings__c</fullName>
		<label>MixRank_Total_Ratings</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>MixRank_Total_SDKs_Avg__c</fullName>
		<label>MixRank_Total_SDKs_Avg</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>MixRank_iOS_App_Count__c</fullName>
		<label>MixRank_iOS_App_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>MixRank_iOS_Ratings__c</fullName>
		<label>MixRank_iOS_Ratings</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>MixRank_iOS_SKDs_Avg__c</fullName>
		<label>MixRank_iOS_SKDs_Avg</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>NEXT_YEAR_OPP_HIGH__c</fullName>
		<label>NEXT_YEAR_OPP_HIGH</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>NEXT_YEAR_OPP_LOW__c</fullName>
		<label>NEXT_YEAR_OPP_LOW</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>NEXT_YEAR_OPP_MEAN__c</fullName>
		<label>NEXT_YEAR_OPP_MEAN</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Next_Best_Product__c</fullName>
		<label>Next Best Product</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_EMPLOYEES_Missing_Ind__c</fullName>
		<label>PARENT_ACCOUNT_EMPLOYEES_Missing_Ind</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_EMPLOYEES__c</fullName>
		<label>PARENT_ACCOUNT_EMPLOYEES</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_GEO_AMERICAS__c</fullName>
		<label>PARENT_ACCOUNT_GEO_AMERICAS</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_GEO_ASIA__c</fullName>
		<label>PARENT_ACCOUNT_GEO_ASIA</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_GEO_EMEA__c</fullName>
		<label>PARENT_ACCOUNT_GEO_EMEA</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_GEO_JAPAN__c</fullName>
		<label>PARENT_ACCOUNT_GEO_JAPAN</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_Advertising__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_Advertising</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_Construction__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_Construction</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_EducationHigherE__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_EducationHigherE</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_EducationK12__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_EducationK12</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_EnergyMiningOilG__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_EnergyMiningOilG</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_FinancialService__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_FinancialService</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_GovernmentFedera__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_GovernmentFedera</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_GovernmentMilita__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_GovernmentMilita</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_GovernmentState__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_GovernmentState</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_HealthCare__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_HealthCare</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_Insurance__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_Insurance</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_ManufacturingAer__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_ManufacturingAer</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_ManufacturingAut__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_ManufacturingAut</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_ManufacturingCon__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_ManufacturingCon</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_ManufacturingInd__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_ManufacturingInd</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_MediaEntertainme__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_MediaEntertainme</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_MembershipOrgani__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_MembershipOrgani</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_NonProfit__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_NonProfit</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
</CustomObject>